--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,7 +54,6 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -65,12 +64,21 @@ p {
     margin-left: 20px;
 }
 
-.section-1-headers {
+.content-1 {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.content-1-headers {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.section-img-left {
+.section-imgs-left {
     float: left;
     margin-right: 25px;
     max-height: 200px;
@@ -80,15 +88,6 @@ p {
     float: right;
     margin-left: 25px;
     max-height: 200px;
-}
-
-.content-1 {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
 }
 
 #side-bar {
@@ -123,8 +122,4 @@ footer {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-}
-
-#footer-text {
-    font-size: 20px;
 }
